xsm_expl/Stages/4/Frontend/y.output
   0  $accept : start $end

   1  start : GDeclBlock BEGIN_ Slist END SEMICOLON
   2        | BEGIN_ END SEMICOLON

   3  Slist : Slist Stmt SEMICOLON
   4        | Stmt SEMICOLON

   5  Stmt : inputStmt
   6       | outputStmt
   7       | assignStmt
   8       | ifStmt
   9       | whileStmt
  10       | doWhileStmt
  11       | breakStmt
  12       | continueStmt
  13       | breakPointStmt

  14  inputStmt : READ expr

  15  outputStmt : WRITE expr

  16  assignStmt : ID EQUAL expr
  17             | ID '[' expr ']' EQUAL expr

  18  ifStmt : IF expr THEN Slist ELSE Slist ENDIF
  19         | IF expr THEN Slist ENDIF

  20  whileStmt : WHILE expr DO Slist ENDWHILE

  21  doWhileStmt : DO Slist WHILE expr ENDWHILE

  22  breakStmt : BREAK

  23  continueStmt : CONTINUE

  24  breakPointStmt : BREAKPOINT

  25  GDeclBlock : DECL GDeclList ENDDECL
  26             | DECL ENDDECL

  27  GDeclList : GDeclList GDecl
  28            | GDecl

  29  GDecl : Type GIDList SEMICOLON

  30  Type : INT
  31       | STR

  32  GIDList : GIDList COMMA GID
  33          | GID

  34  GID : ID
  35      | ID '[' NUM ']'

  36  expr : expr PLUS expr
  37       | expr MINUS expr
  38       | expr MUL expr
  39       | expr DIV expr
  40       | expr MOD expr
  41       | expr EQ expr
  42       | expr NEQ expr
  43       | expr LT expr
  44       | expr LTE expr
  45       | expr GT expr
  46       | expr GTE expr
  47       | '(' expr ')'
  48       | ID '[' expr ']'
  49       | ID
  50       | NUM
  51       | STRING

state 0
	$accept : . start $end  (0)

	BEGIN_  shift 1
	DECL  shift 2
	.  error

	start  goto 3
	GDeclBlock  goto 4


state 1
	start : BEGIN_ . END SEMICOLON  (2)

	END  shift 5
	.  error


state 2
	GDeclBlock : DECL . GDeclList ENDDECL  (25)
	GDeclBlock : DECL . ENDDECL  (26)

	ENDDECL  shift 6
	INT  shift 7
	STR  shift 8
	.  error

	GDeclList  goto 9
	GDecl  goto 10
	Type  goto 11


state 3
	$accept : start . $end  (0)

	$end  accept


state 4
	start : GDeclBlock . BEGIN_ Slist END SEMICOLON  (1)

	BEGIN_  shift 12
	.  error


state 5
	start : BEGIN_ END . SEMICOLON  (2)

	SEMICOLON  shift 13
	.  error


state 6
	GDeclBlock : DECL ENDDECL .  (26)

	.  reduce 26


state 7
	Type : INT .  (30)

	.  reduce 30


state 8
	Type : STR .  (31)

	.  reduce 31


state 9
	GDeclBlock : DECL GDeclList . ENDDECL  (25)
	GDeclList : GDeclList . GDecl  (27)

	ENDDECL  shift 14
	INT  shift 7
	STR  shift 8
	.  error

	GDecl  goto 15
	Type  goto 11


state 10
	GDeclList : GDecl .  (28)

	.  reduce 28


state 11
	GDecl : Type . GIDList SEMICOLON  (29)

	ID  shift 16
	.  error

	GIDList  goto 17
	GID  goto 18


state 12
	start : GDeclBlock BEGIN_ . Slist END SEMICOLON  (1)

	ID  shift 19
	READ  shift 20
	WRITE  shift 21
	BREAKPOINT  shift 22
	IF  shift 23
	WHILE  shift 24
	DO  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	.  error

	Slist  goto 28
	Stmt  goto 29
	inputStmt  goto 30
	outputStmt  goto 31
	assignStmt  goto 32
	ifStmt  goto 33
	whileStmt  goto 34
	doWhileStmt  goto 35
	breakStmt  goto 36
	continueStmt  goto 37
	breakPointStmt  goto 38


state 13
	start : BEGIN_ END SEMICOLON .  (2)

	.  reduce 2


state 14
	GDeclBlock : DECL GDeclList ENDDECL .  (25)

	.  reduce 25


state 15
	GDeclList : GDeclList GDecl .  (27)

	.  reduce 27


state 16
	GID : ID .  (34)
	GID : ID . '[' NUM ']'  (35)

	'['  shift 39
	SEMICOLON  reduce 34
	COMMA  reduce 34


state 17
	GDecl : Type GIDList . SEMICOLON  (29)
	GIDList : GIDList . COMMA GID  (32)

	SEMICOLON  shift 40
	COMMA  shift 41
	.  error


state 18
	GIDList : GID .  (33)

	.  reduce 33


state 19
	assignStmt : ID . EQUAL expr  (16)
	assignStmt : ID . '[' expr ']' EQUAL expr  (17)

	EQUAL  shift 42
	'['  shift 43
	.  error


state 20
	inputStmt : READ . expr  (14)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 48


state 21
	outputStmt : WRITE . expr  (15)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 49


state 22
	breakPointStmt : BREAKPOINT .  (24)

	.  reduce 24


state 23
	ifStmt : IF . expr THEN Slist ELSE Slist ENDIF  (18)
	ifStmt : IF . expr THEN Slist ENDIF  (19)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 50


state 24
	whileStmt : WHILE . expr DO Slist ENDWHILE  (20)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 51


state 25
	doWhileStmt : DO . Slist WHILE expr ENDWHILE  (21)

	ID  shift 19
	READ  shift 20
	WRITE  shift 21
	BREAKPOINT  shift 22
	IF  shift 23
	WHILE  shift 24
	DO  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	.  error

	Slist  goto 52
	Stmt  goto 29
	inputStmt  goto 30
	outputStmt  goto 31
	assignStmt  goto 32
	ifStmt  goto 33
	whileStmt  goto 34
	doWhileStmt  goto 35
	breakStmt  goto 36
	continueStmt  goto 37
	breakPointStmt  goto 38


state 26
	breakStmt : BREAK .  (22)

	.  reduce 22


state 27
	continueStmt : CONTINUE .  (23)

	.  reduce 23


state 28
	start : GDeclBlock BEGIN_ Slist . END SEMICOLON  (1)
	Slist : Slist . Stmt SEMICOLON  (3)

	ID  shift 19
	END  shift 53
	READ  shift 20
	WRITE  shift 21
	BREAKPOINT  shift 22
	IF  shift 23
	WHILE  shift 24
	DO  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	.  error

	Stmt  goto 54
	inputStmt  goto 30
	outputStmt  goto 31
	assignStmt  goto 32
	ifStmt  goto 33
	whileStmt  goto 34
	doWhileStmt  goto 35
	breakStmt  goto 36
	continueStmt  goto 37
	breakPointStmt  goto 38


state 29
	Slist : Stmt . SEMICOLON  (4)

	SEMICOLON  shift 55
	.  error


state 30
	Stmt : inputStmt .  (5)

	.  reduce 5


state 31
	Stmt : outputStmt .  (6)

	.  reduce 6


state 32
	Stmt : assignStmt .  (7)

	.  reduce 7


state 33
	Stmt : ifStmt .  (8)

	.  reduce 8


state 34
	Stmt : whileStmt .  (9)

	.  reduce 9


state 35
	Stmt : doWhileStmt .  (10)

	.  reduce 10


state 36
	Stmt : breakStmt .  (11)

	.  reduce 11


state 37
	Stmt : continueStmt .  (12)

	.  reduce 12


state 38
	Stmt : breakPointStmt .  (13)

	.  reduce 13


state 39
	GID : ID '[' . NUM ']'  (35)

	NUM  shift 56
	.  error


state 40
	GDecl : Type GIDList SEMICOLON .  (29)

	.  reduce 29


state 41
	GIDList : GIDList COMMA . GID  (32)

	ID  shift 16
	.  error

	GID  goto 57


state 42
	assignStmt : ID EQUAL . expr  (16)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 58


state 43
	assignStmt : ID '[' . expr ']' EQUAL expr  (17)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 59


state 44
	expr : ID . '[' expr ']'  (48)
	expr : ID .  (49)

	'['  shift 60
	PLUS  reduce 49
	MINUS  reduce 49
	MUL  reduce 49
	DIV  reduce 49
	MOD  reduce 49
	THEN  reduce 49
	DO  reduce 49
	ENDWHILE  reduce 49
	SEMICOLON  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LT  reduce 49
	LTE  reduce 49
	GT  reduce 49
	GTE  reduce 49
	']'  reduce 49
	')'  reduce 49


state 45
	expr : NUM .  (50)

	.  reduce 50


state 46
	expr : STRING .  (51)

	.  reduce 51


state 47
	expr : '(' . expr ')'  (47)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 61


state 48
	inputStmt : READ expr .  (14)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	SEMICOLON  reduce 14


state 49
	outputStmt : WRITE expr .  (15)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	SEMICOLON  reduce 15


state 50
	ifStmt : IF expr . THEN Slist ELSE Slist ENDIF  (18)
	ifStmt : IF expr . THEN Slist ENDIF  (19)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	THEN  shift 73
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	.  error


state 51
	whileStmt : WHILE expr . DO Slist ENDWHILE  (20)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	DO  shift 74
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	.  error


state 52
	Slist : Slist . Stmt SEMICOLON  (3)
	doWhileStmt : DO Slist . WHILE expr ENDWHILE  (21)

	ID  shift 19
	READ  shift 20
	WRITE  shift 21
	BREAKPOINT  shift 22
	IF  shift 23
	WHILE  shift 75
	DO  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	.  error

	Stmt  goto 54
	inputStmt  goto 30
	outputStmt  goto 31
	assignStmt  goto 32
	ifStmt  goto 33
	whileStmt  goto 34
	doWhileStmt  goto 35
	breakStmt  goto 36
	continueStmt  goto 37
	breakPointStmt  goto 38


state 53
	start : GDeclBlock BEGIN_ Slist END . SEMICOLON  (1)

	SEMICOLON  shift 76
	.  error


state 54
	Slist : Slist Stmt . SEMICOLON  (3)

	SEMICOLON  shift 77
	.  error


state 55
	Slist : Stmt SEMICOLON .  (4)

	.  reduce 4


state 56
	GID : ID '[' NUM . ']'  (35)

	']'  shift 78
	.  error


state 57
	GIDList : GIDList COMMA GID .  (32)

	.  reduce 32


state 58
	assignStmt : ID EQUAL expr .  (16)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	SEMICOLON  reduce 16


state 59
	assignStmt : ID '[' expr . ']' EQUAL expr  (17)
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	']'  shift 79
	.  error


state 60
	expr : ID '[' . expr ']'  (48)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 80


state 61
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)
	expr : '(' expr . ')'  (47)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	')'  shift 81
	.  error


state 62
	expr : expr PLUS . expr  (36)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 82


state 63
	expr : expr MINUS . expr  (37)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 83


state 64
	expr : expr MUL . expr  (38)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 84


state 65
	expr : expr DIV . expr  (39)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 85


state 66
	expr : expr MOD . expr  (40)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 86


state 67
	expr : expr EQ . expr  (41)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 87


state 68
	expr : expr NEQ . expr  (42)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 88


state 69
	expr : expr LT . expr  (43)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 89


state 70
	expr : expr LTE . expr  (44)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 90


state 71
	expr : expr GT . expr  (45)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 91


state 72
	expr : expr GTE . expr  (46)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 92


state 73
	ifStmt : IF expr THEN . Slist ELSE Slist ENDIF  (18)
	ifStmt : IF expr THEN . Slist ENDIF  (19)

	ID  shift 19
	READ  shift 20
	WRITE  shift 21
	BREAKPOINT  shift 22
	IF  shift 23
	WHILE  shift 24
	DO  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	.  error

	Slist  goto 93
	Stmt  goto 29
	inputStmt  goto 30
	outputStmt  goto 31
	assignStmt  goto 32
	ifStmt  goto 33
	whileStmt  goto 34
	doWhileStmt  goto 35
	breakStmt  goto 36
	continueStmt  goto 37
	breakPointStmt  goto 38


state 74
	whileStmt : WHILE expr DO . Slist ENDWHILE  (20)

	ID  shift 19
	READ  shift 20
	WRITE  shift 21
	BREAKPOINT  shift 22
	IF  shift 23
	WHILE  shift 24
	DO  shift 25
	BREAK  shift 26
	CONTINUE  shift 27
	.  error

	Slist  goto 94
	Stmt  goto 29
	inputStmt  goto 30
	outputStmt  goto 31
	assignStmt  goto 32
	ifStmt  goto 33
	whileStmt  goto 34
	doWhileStmt  goto 35
	breakStmt  goto 36
	continueStmt  goto 37
	breakPointStmt  goto 38


state 75
	whileStmt : WHILE . expr DO Slist ENDWHILE  (20)
	doWhileStmt : DO Slist WHILE . expr ENDWHILE  (21)

	ID  shift 44
	NUM  shift 45
	STRING  shift 46
	'('  shift 47
	.  error

	expr  goto 95


state 76
	start : GDeclBlock BEGIN_ Slist END SEMICOLON .  (1)

	.  reduce 1


state 77
	Slist : Slist Stmt SEMICOLON .  (3)

	.  reduce 3


state 78
	GID : ID '[' NUM ']' .  (35)

	.  reduce 35


state 79
	assignStmt : ID '[' expr ']' . EQUAL expr  (17)

	EQUAL  shift 96
	.  error


state 80
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)
	expr : ID '[' expr . ']'  (48)

	PLUS  shift 62
	MINUS  shift 63
	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	EQ  shift 67
	NEQ  shift 68
	LT  shift 69
	LTE  shift 70
	GT  shift 71
	GTE  shift 72
	']'  shift 97
	.  error


state 81
	expr : '(' expr ')' .  (47)

	.  reduce 47


state 82
	expr : expr . PLUS expr  (36)
	expr : expr PLUS expr .  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	PLUS  reduce 36
	MINUS  reduce 36
	THEN  reduce 36
	DO  reduce 36
	ENDWHILE  reduce 36
	SEMICOLON  reduce 36
	EQ  reduce 36
	NEQ  reduce 36
	LT  reduce 36
	LTE  reduce 36
	GT  reduce 36
	GTE  reduce 36
	']'  reduce 36
	')'  reduce 36


state 83
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr MINUS expr .  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	MUL  shift 64
	DIV  shift 65
	MOD  shift 66
	PLUS  reduce 37
	MINUS  reduce 37
	THEN  reduce 37
	DO  reduce 37
	ENDWHILE  reduce 37
	SEMICOLON  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	LT  reduce 37
	LTE  reduce 37
	GT  reduce 37
	GTE  reduce 37
	']'  reduce 37
	')'  reduce 37


state 84
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr MUL expr .  (38)
	expr : expr . DIV expr  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	.  reduce 38


state 85
	expr : expr . PLUS expr  (36)
	expr : expr . MINUS expr  (37)
	expr : expr . MUL expr  (38)
	expr : expr . DIV expr  (39)
	expr : expr DIV expr .  (39)
	expr : expr . MOD expr  (40)
	expr : expr . EQ expr  (41)
	expr : expr . NEQ expr  (42)
	expr : expr . LT expr  (43)
	expr : expr . LTE expr  (44)
	expr : expr . GT expr  (45)
	expr : expr . GTE expr  (46)

	.  reduce 39

